// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with expenses 1`] = `
<div>
  <h1>
    Expense List
  </h1>
  props.expenses.length === 0 ? (
  <p>
    No expenses found.
  </p>
  ) : (
  <ExpenseListItem
    amount={195}
    createdAt={0}
    description="Gum"
    id={1}
    key="1"
    note=""
  />
  <ExpenseListItem
    amount={195242423}
    createdAt={-345600000}
    description="Rent"
    id={2}
    key="2"
    note=""
  />
  <ExpenseListItem
    amount={450}
    createdAt={345600000}
    description="Credit card"
    id={2}
    key="2"
    note=""
  />
  )
</div>
`;

exports[`should render expense list with empty message 1`] = `
<div>
  <h1>
    Expense List
  </h1>
  props.expenses.length === 0 ? (
  <p>
    No expenses found.
  </p>
  ) : (
  )
</div>
`;
